--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -30,3 +30,11 @@
 <p><a href="{% url 'login' %}">Login</a> to leave a comment.</p>
 {% endif %}
 {% endblock %}
+
+<p><strong>Tags:</strong>
+    {% for tag in object.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% empty %}
+    No tags.
+    {% endfor %}
+</p>
